--- a/vue-cli/package.json
+++ b/vue-cli/package.json
@@ -10,7 +10,11 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/vue-fontawesome": "^0.1.9",
     "echarts": "^4.7.0",
+    "feather-icons": "^4.28.0",
     "vue": "^2.5.11",
     "vue-baidu-map": "^0.21.22",
     "vue-echarts-v3": "^2.0.1",
